--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.14.11"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "connect": "^3.6.5",
     "express": "^4.16.2",
